# SiS

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
docs/: Building.md  LangSyntax.md  LibraryCreation.md
docs/stdlib/: io.md  math.md  os.md  random.md  regex.md  string.md  time.md
include/: AstPrinter.h  Environment.h  Evaluator.h  FinalParser.h  Lexer.h  Logging.h  NativeFunctions.h  Parser.h  ParserNodeTypes.h  Program.h  SisDynamicLibMacros.h  SisRegistry.h  Token.h  Value.h  repl.h  string_parser.h
release-notes/: v0.1.1-alpha.md  v0.2.0-alpha.md  v0.3.0-alpha.md  v1.0.0.md
scripts/: build_and_package.sh  install_linux.sh  install_windows.ps1
sis_sources/tests/arithmetic/: basic.sis  comparisons.sis  compound_assign.sis  modulo.sis
sis_sources/tests/arrays/: length.sis  literal.sis  mutation.sis  push_pop.sis  reference_semantics.sis
sis_sources/tests/builtins/: len.sis  num.sis  str.sis  type.sis
sis_sources/tests/classes/: basic.sis  constructor.sis  field_access.sis  field_defaults.sis  first_class_class.sis  instance_independence.sis
sis_sources/tests/control_flow/: else_if.sis  for_basic.sis  for_break.sis  if_else.sis  if_else_false.sis  switch_default.sis  switch_match.sis  switch_no_bleedthrough.sis  while.sis  while_break.sis  while_continue.sis
sis_sources/tests/documentation/: docs_works.sis
sis_sources/tests/errors/: empty_string_falsy.sis  missing_key_compound_assign.sis  missing_semicolon.sis  null_falsy.sis  zero_falsy.sis
sis_sources/tests/functions/: basic_call.sis  closure.sis  closure_mutation.sis  early_return.sis  factorial.sis  first_class.sis
sis_sources/tests/includes/: alias_prevent_default_name.sis  alias_works.sis  bare_fn_fails.sis  bare_name_fails.sis  bare_new_fails.sis  basic_include.sis  circular.sis  double_include.sis  lib_second.sis  library.sis  namespace_access.sis  nested_namespacing.sis
sis_sources/tests/includes/sub/: outer.sis
sis_sources/tests/inheritance/: field_layering.sis  inherit_method.sis  multi_level.sis  override.sis  super_call.sis
sis_sources/tests/variables/: globals.sis  null_default.sis  shadowing.sis
src/: AstPrinter.cpp  Evaluator.cpp  FinalParser.cpp  Lexer.cpp  ParallelParser.cpp  Parser.cpp  Value.cpp  main.cpp
stdlib/: CMakeLists.txt  build_stdlib.sh
stdlib/demo/: CMakeLists.txt  stdlib.cpp  stdlib_macrofied.cpp
stdlib/dynamic/io/: io.cpp
stdlib/dynamic/math/: math.cpp
stdlib/dynamic/os/: os.cpp
stdlib/dynamic/random/: random.cpp
stdlib/dynamic/regex/: regex.cpp
stdlib/dynamic/string/: string.cpp
stdlib/dynamic/time/: time.cpp
stdlib/managed/: vector.sis
test/: CMakeLists.txt
test/units/: EndToEndTest.cpp  EvaluatorTest.cpp  LexerTest.cpp  ParserTest.cpp
